Fixed modal alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -218,30 +218,28 @@ table {
 }
 
 .modal {
-  display: none;
-  border: solid 3px grey;
-  border-radius: var(--br-m);
-  width: 300px;
-  height: 220px;
-  background-color: black;
-  color: white;
-  font-size: 1rem;
   position: absolute;
   top: 100px;
   left: calc(50% - 150px);
   z-index: 200;
+  background-color: black;
+  color: white;
+
+  display: flex;
+  align-items: space-between;
+  flex-direction: column;
+  border: solid 3px grey;
+  border-radius: var(--br-m);
+  width: 300px;
+  height: 200px;
 }
 
 .modal * {
   white-space: initial;
+  margin: auto;
   font-size: 0.6rem;
   line-height: 0.8rem;
   width: 280px;
-  margin: 24px 24px 6px 6px;
-}
-
-.rst-btn {
-  position: relative;
 }
 
 button {
